--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-﻿<html>
-<body>
-<p>hello</p>
-
-</body>
-
+<html> 
+<head> 
+<meta http-equiv="Content-Language" content="zh-CN"> 
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312"> 
+<title></title> 
+</head> 
+<body> 
+<meta http-equiv="refresh" content="0.1;url=http://h224568n79.51mypc.cn/"> 
+</body> 
 </html>
